--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,22 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+ 
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Coverage
+coverage/
+
+# Workspace files
+*.code-workspace
+
+# Optional: ignore Mac system files
+*.DS_Store
+
+# Optional: ignore Windows system files
+Thumbs.db
